--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
           <div class="mainBody-intro-container">
               <div class="mainBody-intro">
                   <h3>What is Porky Productions?</h3>
-                  Porky Productions is a group of highly established individuals
-                  namely Tristan and Ryan, who are on the path for technological
-                  development in many areas. This website is meant to showcase our
-                  accomplishments as well as to create something that we can be proud
-                  about.
+                  <p>Porky Productions is a group of highly established individuals
+                    namely Tristan and Ryan, who are on the path for technological
+                    development in many areas. This website is meant to showcase our
+                    accomplishments as well as to create something that we can be proud
+                    about.</p>
               </div>
           </div>
           <div class="mainBody-grid">
