made the other section flyin

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               </p>
           </div>
           <br>
-          <div>
+          <div id="flyin">
               <h1 class=" block-description-header mainTitle">Our Founders</h1>
 
               <div class="mainBody-grid">
