finished adding the fonts

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
     </div>
     <br />
-
+<!--NOTE: Titles and Headers are the "Raleway" font, everything else is Arial or sans-serif -->
     <div>
       <div class="mainTitleRaleBold padding-semi-large">
         <h1>PorkyProductions</h1>
@@ -66,7 +66,7 @@
       <div class="mainBody">
           <div class="mainBody-intro-container">
               <div class="mainBody-intro">
-                  <h3 id="flyin">What is Porky Productions?</h3>
+                  <h3 class="raleway" id="flyin">What is Porky Productions?</h3>
                   <p id="flyin">Porky Productions is a group of highly established individuals
                     namely Tristan and Ryan, who are on the path for technological
                     development in many areas. This website is meant to showcase our
@@ -76,7 +76,7 @@
           </div>
           <div class="mainBody-grid">
               <div class="mainBody-tile">
-                  <h3>You Make Games?</h3>
+                  <h3 class="raleway">You Make Games?</h3>
                   <p>
                       Current games are being produced by Hedgehog Studios and is
                       setting a new foundation for releases of cool, slick games that
@@ -86,7 +86,7 @@
                   <a href="games.html">Games Tab</a>
               </div>
               <div class="mainBody-tile">
-                  <h3>Porky Productions 3D Prints</h3>
+                  <h3 class="raleway">Porky Productions 3D Prints</h3>
                   <p>
                       Porky Productions also specialize in building real world models
                       using our 3D printers. Our creations, and models can be viewed
@@ -97,7 +97,7 @@
           </div>
           <div class="mainBody-grid">
               <div class="mainBody-tile">
-                  <h3>Porky Productions Models</h3>
+                  <h3 class="raleway">Porky Productions Models</h3>
                   <p>
                       Porky Productions also specialize in building real world models
                       using our 3D printers. Our creations, and models can be viewed
@@ -106,7 +106,7 @@
                   <a href="Models.html">Models Tab</a>
               </div>
               <div class="mainBody-tile">
-                  <h3>Porky Productions Developments</h3>
+                  <h3 class="raleway">Porky Productions Developments</h3>
                   <p>
                       Porky Productions also specialize in building software that can change the world. Our Developments can be seen here!
                   </p>
@@ -117,7 +117,7 @@
           <div class='blue-gradient'>
               
               <br>
-              <h1 class="mainTitle-white block-description-header" >
+              <h1 class="mainTitleRale-white block-description-header" >
                   Our Mission
               </h1>
 
@@ -131,12 +131,12 @@
           </div>
           <br>
           <div id="flyin">
-              <h1 class=" block-description-header mainTitle">Our Founders</h1>
+              <h1 class=" block-description-header mainTitleRale">Our Founders</h1>
 
               <div class="mainBody-grid">
                   <div class="mainBody-tile">
-                      <h3>Tristan</h3>
-                      <h5> (HedgehogDubz) </h5>
+                      <h3 class="raleway">Tristan</h3>
+                      <h5 class="raleway"> (HedgehogDubz) </h5>
                       <img src="https://avatars.githubusercontent.com/u/53802238?v=4" width="210" alt="tristan's avatar" />
                       <p>
                           Tristan is a software / hardware developer as a hobbiest.
@@ -150,8 +150,8 @@
                       </p>
                   </div>
                   <div class="mainBody-tile">
-                      <h3>Ryan</h3>
-                      <h5> (hiteacheryouare) </h5>
+                      <h3 class="raleway">Ryan</h3>
+                      <h5 class="raleway"> (hiteacheryouare) </h5>
                       <img src="https://avatars.githubusercontent.com/u/82683251?v=4" width="210" alt="ryan's avatar" />
                       <p>
                           Ryan is a software developer as a hobbiest.
@@ -167,7 +167,7 @@
           
           <div class='red-orange-gradient'>
 
-              <h1 class="mainTitle-white block-description-header">The PorkyProductions Origin Story</h1>
+              <h1 class="mainTitleRale-white block-description-header">The PorkyProductions Origin Story</h1>
               <p class="mainBody block-description-text" style="padding-left: 20%; padding-right: 20%
 ">
                   Our story begins in 2017, when our founders, Tristan and Ryan met in school.
