try adding loader

--- a/index.html
+++ b/index.html
@@ -184,7 +184,9 @@
               <br>
 
           </div>
-
+        <div class="loader-wrapper">
+            <span class="loader"><span class="loader-inner"></span></span>  
+        </div>
        <br />
         <br />
           <br />
