added comments for clarity

--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
               <br>
 
           </div>
+        <!--THIS is the div that contains the loading screen-->
         <div class="loader-wrapper">
             <span class="loader"><span class="loader-inner"></span></span>  
         </div>
@@ -214,6 +215,7 @@
           </div>
 
       </div>
+      <!--BELOW is the function that hides the loading screen. Refer to "index.js"-->
       <script>
         $(window).on("load",function(){
           $(".loader-wrapper").fadeOut("slow");
