added loader to all the other pages

--- a/credits.html
+++ b/credits.html
@@ -53,6 +53,9 @@
        <img src="https://git-scm.com/images/logo@2x.png" alt="Git">
 
    </div> 
+   <div class="loader-wrapper">
+    <span class="loader"><span class="loader-inner"></span></span>  
+</div>
    <div class="footer">
     <br>
     <br>
