--- a/games.html
+++ b/games.html
@@ -82,6 +82,9 @@
             Hedgehog Studios is currently working on a new local multiplayer (LAN) fighting game. It is unkown when the game will be realeased.
         </p>
     </div>
+    <div class="loader-wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>  
+    </div>
 
 
     <div class="footer">
