--- a/3DPrints.html
+++ b/3DPrints.html
@@ -61,6 +61,9 @@
             produce via a 3D Printer.
         </p>
     </div>
+    <div class="loader-wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>  
+    </div>
     <div class="footer">
         <br>
         <br>
