--- a/develop.html
+++ b/develop.html
@@ -118,6 +118,9 @@
         <br>
         </p>
     </div>
+    <div class="loader-wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>  
+    </div>
     <div class="footer">
         <br>
         <br>
