--- a/models.html
+++ b/models.html
@@ -88,6 +88,9 @@
             </div>
         </div>
     </div>
+    <div class="loader-wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>  
+    </div>
     <div class="footer">
         <br>
         <br>
