--- a/credits.html
+++ b/credits.html
@@ -75,5 +75,11 @@
     <a class="center" href="credits.html">Credits</a>
     <a class="center" href="https://practical-lamport-2debac.netlify.app/">Sister Site (identical, if this site doesn't work, try this)</a>
 </div>
+<!--BELOW is the function that hides the loading screen. Refer to "index.js"-->
+<script>
+    $(window).on("load",function(){
+      $(".loader-wrapper").fadeOut("slow");
+    });
+  </script>
 </body>
 </html>
