--- a/models.html
+++ b/models.html
@@ -110,6 +110,12 @@
         <a class="center" href="credits.html">Credits</a>
         <a class="center" href="https://practical-lamport-2debac.netlify.app/">Sister Site (identical, if this site doesn't work, try this)</a>
     </div>
+    <!--BELOW is the function that hides the loading screen. Refer to "index.js"-->
+    <script>
+        $(window).on("load",function(){
+          $(".loader-wrapper").fadeOut("slow");
+        });
+      </script>
 </body>
 </html>
 <!--Hi there reader. It looks like youve reached the end of our code. Thats pretty cool. Have you been working this entire time? Maybe give yourself a break. You work more productive when youre not tired :) -->
