fixed image being too big
FINALLY

--- a/3DPrints.html
+++ b/3DPrints.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/MasterStyle.css" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/3dprint.css" />
     <link rel="icon" type="icon" href="assets/HedgehogIcon.png" />
     <!--FAVICON-->
 </head>
@@ -50,7 +51,7 @@
             <h1>3D Prints</h1>
         </div>
         <br />
-        <img src="images/IMG_4488.JPG" width="10" class="center" alt="imperial credit" />
+        <img src="images/IMG_4488.JPG" class="center imgSmall" alt="imperial credit" />
         <p class="mainBody">THE IMPERIAL CREDIT</p>
         <br />
         <p class="mainBody">
