added fonts to all other pages
and made ir so that the loader covers the whole page

--- a/3DPrints.html
+++ b/3DPrints.html
@@ -47,7 +47,7 @@
     </div>
     <br />
     <div style="padding-left: 20px">
-        <div class="mainTitle">
+        <div class="mainTitle raleway">
             <h1>3D Prints</h1>
         </div>
         <br />
