--- a/games.html
+++ b/games.html
@@ -44,13 +44,13 @@
     </div>
     <br />
     <div style="padding-left: 20px">
-        <div class="mainTitle">
+        <div class="mainTitleRale">
             <h1>Hedgehog Studios Games</h1>
         </div>
         <br />
     </div>
     <div class="dark-blue-gradient">
-        <h1 class="mainTitle-white padding-xlarge">
+        <h1 class="mainTitleRale-white padding-xlarge">
             Platforms
         </h1>
     </div>
@@ -61,7 +61,7 @@
     </div>
 
     <div class="dark-green-gradient">
-        <h1 class="mainTitle-white padding-xlarge">
+        <h1 class="mainTitleRale-white padding-xlarge">
             Currently Available Games
         </h1>
     </div>
@@ -73,7 +73,7 @@
 
 
     <div class="grey-gradient">
-        <h1 class="mainTitle-white padding-xlarge">
+        <h1 class="mainTitleRale-white padding-xlarge">
             Games In Development
         </h1>
     </div>
