--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
           </div>
         <!--THIS is the div that contains the loading screen-->
-        <div class="loader-wrapper">
+        <div class="loader-wrapper loader-padding">
             <span class="loader"><span class="loader-inner"></span></span>  
         </div>
        <br />
