--- a/models.html
+++ b/models.html
@@ -46,16 +46,16 @@
     </div>
     <br />
     <div style="padding-left: 20px">
-        <div class="mainTitle">
+        <div class="mainTitleRale">
             <h1>3D Model Showcase</h1>
-            <p class="mainBody center padding-small">
+            <p class="mainBodyRale center padding-small">
                 This page will be updated periodically with new models as they are made.
             </p>
         </div>
         <br />
         <div class="mainBody-grid">
             <div class="mainBody-tile">
-                <h3>Hedgehog - By Tristan</h3>
+                <h3 class="raleway">Hedgehog - By Tristan</h3>
                 <a href="models/hedgehog.stl">Download Hedgehog Model (.stl)</a>
                 <br />
                 <img id="hedgehogModelPreview"
@@ -65,14 +65,14 @@
                      alt="Hedgehog Model Front" />
                 <br />
                 <button id="button_HedgehogPreviewLeft" class="buttonBigger">
-                    <
+                    
                 </button>
                 <button id="button_HedgehogPreviewRight" class="buttonBigger">
                     >
                 </button>
             </div>
             <div class="mainBody-tile">
-                <h3>Old Books - By Ryan</h3>
+                <h3 class="raleway">Old Books - By Ryan</h3>
                 <p>
                     <a href="models/old boooke.stl">Download Old BooksModel (.stl)</a>
                     <br />
