centered the padding on the loaders

--- a/3DPrints.html
+++ b/3DPrints.html
@@ -62,7 +62,7 @@
             produce via a 3D Printer.
         </p>
     </div>
-    <div class="loader-wrapper">
+    <div class="loader-wrapper loader-padding">
         <span class="loader"><span class="loader-inner"></span></span>  
     </div>
     <div class="footer">
