--- a/credits.html
+++ b/credits.html
@@ -53,7 +53,7 @@
        <img src="https://git-scm.com/images/logo@2x.png" alt="Git">
 
    </div> 
-   <div class="loader-wrapper">
+   <div class="loader-wrapper loader-padding">
     <span class="loader"><span class="loader-inner"></span></span>  
 </div>
    <div class="footer">
