--- a/develop.html
+++ b/develop.html
@@ -118,7 +118,7 @@
         <br>
         </p>
     </div>
-    <div class="loader-wrapper">
+    <div class="loader-wrapper loader-padding">
         <span class="loader"><span class="loader-inner"></span></span>  
     </div>
     <div class="footer">
