--- a/games.html
+++ b/games.html
@@ -106,7 +106,7 @@
         <a class="center" href="credits.html">Credits</a>
         <a class="center" href="https://practical-lamport-2debac.netlify.app/">Sister Site (identical, if this site doesn't work, try this)</a>
     </div>
-    <div class="loader-wrapper">
+    <div class="loader-wrapper loader-padding">
         <span class="loader"><span class="loader-inner"></span></span>  
     </div>
     <!--BELOW is the function that hides the loading screen. Refer to "index.js"-->
