--- a/models.html
+++ b/models.html
@@ -88,7 +88,7 @@
             </div>
         </div>
     </div>
-    <div class="loader-wrapper">
+    <div class="loader-wrapper loader-padding">
         <span class="loader"><span class="loader-inner"></span></span>  
     </div>
     <div class="footer">
