--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
             crossorigin="anonymous"></script>
 <!--Boostrap JavaScript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+<!--Twitter Emoji Javascript-->
+<script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
     <!-----SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS----->
 
     <script type="text/javascript" src="js/Utility.js"></script>
     <script type="text/javascript" src="js/Header.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/secret.js"></script>
 
 <!--CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS------->
 
@@ -219,11 +221,13 @@
               <br>
               <img src="assets/PPio logo.png" width="25%" alt="porky productions logo" />
               <br>
-              <p>
+              <p id="FooterHeart">
                   Porky Productions is a group of highly established individuals namely
                   Tristan and Ryan, who are on the path for technological development
                   in many areas. This website is meant to showcase our accomplishments
                   as well as to create something that we can be proud about.
+                  <br>
+                  Made with <img src="https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/2764.svg" alt="love" height="10px"> at PorkyProductions
               </p>
               <a class="center" href="index.html">Home</a>
               <a class="center" href="games.html">Games</a>
