--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="js/Header.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/secret.js"></script>
+    <script type="text/javascript" src="js/clickTracker.js"></script>
 
 <!--CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS------->
 
@@ -40,7 +41,7 @@
     <!--FAVICON-->
 </head>
 
-  <body>
+  <body id="page">
     <div id="header" class="header">
       <!--Hegdehog logo thing-->
       <a href="index.html" class="logo">
