--- a/games.html
+++ b/games.html
@@ -15,6 +15,9 @@
     <script src="js/Utility.js"></script>
     <script src="js/Header.js"></script>
 
+    <!--CSS-----------------------------CSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSS-->
+    <link rel="stylesheet" href="css/games.css" />
+
     <link rel="stylesheet" href="css/Header.css" />
     <link rel="stylesheet" href="css/MasterStyle.css" />
     <link rel="stylesheet" href="css/footer.css" />
@@ -63,41 +66,34 @@
         </div>
         <br />
     </div>
-    <div class="dark-blue-gradient">
-        <h1 class="mainTitleRale-white padding-xlarge">
-            Platforms
-        </h1>
-    </div>
-    <div>
-        <p class="mainBody center padding-small">
-            We currently only publish our games to the Microsoft Windows platform, as well as the web using the HTML5 standard. Future platforms include macOS, GNU+Linux, the Xbox Series X|S, Nintendo Switch, and the Playstation 5.
-        </p>
-    </div>
-
-    <div class="dark-green-gradient">
-        <h1 class="mainTitleRale-white padding-xlarge">
-            Currently Available Games
-        </h1>
-    </div>
-    <div>
-        <p class="mainBody center padding-small">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni deleniti blanditiis ipsa perferendis a vitae architecto nulla quibusdam, itaque, quod doloremque animi facere, nisi alias quidem explicabo error tempora placeat.
-        </p>
-    </div>
+    <!--///////////////////////////////GAME CONTENT/////////////////////////////////////////////////////////////////////////-->
+    <!--///////////////////////////////GAME CONTENT/////////////////////////////////////////////////////////////////////////-->
+    <!--///////////////////////////////GAME CONTENT/////////////////////////////////////////////////////////////////////////-->
+    <!--///////////////////////////////GAME CONTENT/////////////////////////////////////////////////////////////////////////-->
+    <div class="mainBody-grid">
+            <div class="mainBody-tile">
+                <h3 class="raleway">BANNER NOT READY YET</h3>
+                <p>
+                    <b>RUSH!</b> - in with your friends and play this NEW SUPER AMAZING GREAT ULTRA MEGA GAME made by us called <b>RUSH!</b> a fun 2D fighter with a great campaign for anyone
+                    to enjoy! Make sure you check this one out! 
+                    <br />
+                    <hr />
+                    -HTML5 Game<br />
+                    -Windows Download<br />
+                    -Controller Support ONLY<br />
+                    -In Development<br />
 
 
-    <div class="grey-gradient">
-        <h1 class="mainTitleRale-white padding-xlarge">
-            Games In Development
-        </h1>
-    </div>
-    <div>
-        <p class="mainBody center padding-small">
-            Hedgehog Studios is currently working on a new local multiplayer (LAN) fighting game. It is unkown when the game will be realeased.
-        </p>
-    </div>
-    <div class="loader-wrapper">
-        <span class="loader"><span class="loader-inner"></span></span>  
+                    
+                </p>
+                <a href="rushGameDownload.html">Play Unfinished Version Here!</a>
+            </div>
+            <div class="mainBody-tile">
+                <h3 class="raleway">BANNER NOT READY YET</h3>
+                <p>
+                   NULNULNUL THIS IS NOTHING NO GAME TO SEE HERE BAKA NERO hahahahahah!
+                </p>
+            </div>
     </div>
 
 
