--- a/3DPrints.html
+++ b/3DPrints.html
@@ -59,7 +59,34 @@
         </div>
     </div>
     <br />
-    
+    <div class="mainBody-grid">
+        <div class="mainBody-tile">
+            <h1 class="mainTitleRale padding-medium">
+                The Imperial Credit
+            </h1>
+            <img src="images/IMG_4488.JPG" alt="imperial credit" class="imgSmall center">
+            <p class="mainBody">
+                The Imperial Credit is a replacement for the existing monetary standard. It can eaisly be mass-produced due to it's 3D printed nature. Instead of relying on cryptography like cryptocurrency, it is a simple, easy to use, and secure payment system. It is the first currency to be created using 3D printing, and the first to be regulated by a company
+            </p>
+        </div>
+        <div class="mainBody-tile">
+            <h1 class="mainTitleRale padding-medium">
+                Hedgehog
+            </h1>
+            <img src="https://scontent-iad3-1.cdninstagram.com/v/t51.2885-15/e35/270296317_652388366132155_3743031954038196014_n.jpg?_nc_ht=scontent-iad3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=ANOjjRF7D70AX-Osv6F&edm=ALQROFkBAAAA&ccb=7-4&ig_cache_key=Mjc0MTAwODUwMDEyMzgxMTczOQ%3D%3D.2-ccb7-4&oh=00_AT_ld8EiwEtzJcT0AAenKSWFyQ9Of9FepNtFJ6bg1l29Jg&oe=620E518A&_nc_sid=30a2ef" alt="Hedgehogs">
+            <p class="mainBody">
+                The Hedgehog is a 3D printed model of our mascot, Porky. It is a small, cute, and cute. It is a hedgehog, and it is a hedgehog.
+            </p>
+        </div>
+    </div>
+    <div id="follow-us">
+        <h1 class="mainTitleRale padding-medium">
+            Follow Us
+        </h1>
+        <p class="mainBody">
+            Want more cool 3D printed models? Follow us on Instagram! <a href="https://www.instagram.com/3dprinting.hedgehogs/" target="_blank">@3dprinting.hedgehogs</a>
+    </div>
+    </div>
     <div class="loader-wrapper loader-padding">
         <span class="loader"><span class="loader-inner"></span></span>  
     </div>
