--- a/3DPrints.html
+++ b/3DPrints.html
@@ -73,7 +73,7 @@
             <h1 class="mainTitleRale padding-medium">
                 Hedgehog
             </h1>
-            <img src="https://scontent-iad3-1.cdninstagram.com/v/t51.2885-15/e35/270296317_652388366132155_3743031954038196014_n.jpg?_nc_ht=scontent-iad3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=ANOjjRF7D70AX-Osv6F&edm=ALQROFkBAAAA&ccb=7-4&ig_cache_key=Mjc0MTAwODUwMDEyMzgxMTczOQ%3D%3D.2-ccb7-4&oh=00_AT_ld8EiwEtzJcT0AAenKSWFyQ9Of9FepNtFJ6bg1l29Jg&oe=620E518A&_nc_sid=30a2ef" alt="Hedgehogs">
+            <img src="images/270296317_652388366132155_3743031954038196014_n.jpg" alt="Hedgehogs" class="imgSmall center">
             <p class="mainBody">
                 The Hedgehog is a 3D printed model of our mascot, Porky. It is a small, cute, and cute. It is a hedgehog, and it is a hedgehog.
             </p>
