dark moded the home page

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
     <br />
 <!--NOTE: Titles and Headers are the "Raleway" font, everything else is Arial or sans-serif -->
-    <div>
+    <div class="dark:bg-black dark:text-white">
       <div class="mainTitleRaleBold padding-semi-large">
         <h1>PorkyProductions</h1>
       </div>
@@ -85,7 +85,7 @@
       <div class="mainBody">
           <div class="mainBody-intro-container">
               <div class="mainBody-intro">
-                  <h3 class="raleway" id="flyin">What is Porky Productions?</h3>
+                  <h3 class="ralewayBold" id="flyin">What is Porky Productions?</h3>
                   <p id="flyin">Porky Productions is a group of highly established individuals
                     namely Tristan and Ryan, who are on the path for technological
                     development in many areas. This website is meant to showcase our
@@ -95,7 +95,7 @@
           </div>
           <div class="mainBody-grid">
               <div class="mainBody-tile">
-                  <h3 class="raleway">You Make Games?</h3>
+                  <h3 class="ralewayBold">You Make Games?</h3>
                   <p>
                       Current games are being produced by Hedgehog Studios and is
                       setting a new foundation for releases of cool, slick games that
@@ -105,7 +105,7 @@
                   <a href="games.html">Games Tab</a>
               </div>
               <div class="mainBody-tile">
-                  <h3 class="raleway">Porky Productions 3D Prints</h3>
+                  <h3 class="ralewayBold">Porky Productions 3D Prints</h3>
                   <p>
                       Porky Productions also specialize in building real world models
                       using our 3D printers. Our creations, and models can be viewed
@@ -116,7 +116,7 @@
           </div>
           <div class="mainBody-grid">
               <div class="mainBody-tile">
-                  <h3 class="raleway">Porky Productions Models</h3>
+                  <h3 class="ralewayBold">Porky Productions Models</h3>
                   <p>
                       Porky Productions also specialize in building real world models
                       using our 3D printers. Our creations, and models can be viewed
@@ -125,7 +125,7 @@
                   <a href="Models.html">Models Tab</a>
               </div>
               <div class="mainBody-tile">
-                  <h3 class="raleway">Porky Productions Developments</h3>
+                  <h3 class="ralewayBold">Porky Productions Developments</h3>
                   <p>
                       Porky Productions also specialize in building software that can change the world. Our Developments can be seen here!
                   </p>
@@ -136,7 +136,7 @@
           <div class='blue-gradient'>
               
               <br>
-              <h1 class="mainTitleRale-white block-description-header" >
+              <h1 class="text-white mainTitleRale-white block-description-header" >
                   Our Mission
               </h1>
 
@@ -154,7 +154,7 @@
 
               <div class="mainBody-grid">
                   <div class="mainBody-tile">
-                      <h3 class="raleway">Tristan</h3>
+                      <h3 class="ralewayBold">Tristan</h3>
                       <h5 class="raleway"> (HedgehogDubz) </h5>
                       <img src="https://avatars.githubusercontent.com/u/53802238?v=4" width="210" alt="tristan's avatar" />
                       <p>
@@ -169,7 +169,7 @@
                       </p>
                   </div>
                   <div class="mainBody-tile">
-                      <h3 class="raleway">Ryan</h3>
+                      <h3 class="ralewayBold">Ryan</h3>
                       <h5 class="raleway"> (hiteacheryouare) </h5>
                       <img src="https://avatars.githubusercontent.com/u/82683251?v=4" width="210" alt="ryan's avatar" />
                       <p>
