dark moded the 3d prints page

--- a/3DPrints.html
+++ b/3DPrints.html
@@ -15,7 +15,7 @@
     <script src="js/Header.js"></script>
     <script src="js/index.js"></script>
 
-    <link rel="stylesheet" href="css/Header.css" />
+    <link rel="stylesheet" href="css/output.css" />
     <link rel="stylesheet" href="css/MasterStyle.css" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/footer.css" />
@@ -59,33 +59,35 @@
         </div>
     </div>
     <br />
-    <div class="mainBody-grid">
-        <div class="mainBody-tile">
-            <h1 class="mainTitleRale padding-medium">
-                The Imperial Credit
-            </h1>
-            <img src="images/IMG_4488.JPG" alt="imperial credit" class="imgSmall center">
-            <p class="mainBody">
-                The Imperial Credit is a replacement for the existing monetary standard. It can eaisly be mass-produced due to it's 3D printed nature. Instead of relying on cryptography like cryptocurrency, it is a simple, easy to use, and secure payment system. It is the first currency to be created using 3D printing, and the first to be regulated by a company
-            </p>
+    <div class="dark:bg-black dark:text-white">
+        <div class="mainBody-grid" class="dark:bg-black dark:text-white">
+            <div class="mainBody-tile">
+                <h1 class="mainTitleRale padding-medium">
+                    The Imperial Credit
+                </h1>
+                <img src="images/IMG_4488.JPG" alt="imperial credit" class="imgSmall center">
+                <p class="mainBody">
+                    The Imperial Credit is a replacement for the existing monetary standard. It can eaisly be mass-produced due to it's 3D printed nature. Instead of relying on cryptography like cryptocurrency, it is a simple, easy to use, and secure payment system. It is the first currency to be created using 3D printing, and the first to be regulated by a company
+                </p>
+            </div>
+            <div class="mainBody-tile">
+                <h1 class="mainTitleRale padding-medium">
+                    Hedgehog
+                </h1>
+                <img src="images/270296317_652388366132155_3743031954038196014_n.jpg" alt="Hedgehogs" class="imgSmall center">
+                <p class="mainBody">
+                    The Hedgehog is a 3D printed model of our mascot, Porky. It is a small, cute, and cute. It is a hedgehog, and it is a hedgehog.
+                </p>
+            </div>
         </div>
-        <div class="mainBody-tile">
+        <div id="follow-us">
             <h1 class="mainTitleRale padding-medium">
-                Hedgehog
+                Follow Us
             </h1>
-            <img src="images/270296317_652388366132155_3743031954038196014_n.jpg" alt="Hedgehogs" class="imgSmall center">
             <p class="mainBody">
-                The Hedgehog is a 3D printed model of our mascot, Porky. It is a small, cute, and cute. It is a hedgehog, and it is a hedgehog.
-            </p>
+                Want more cool 3D printed models? Follow us on Instagram! <a href="https://www.instagram.com/3dprinting.hedgehogs/" target="_blank">@3dprinting.hedgehogs</a>
         </div>
-    </div>
-    <div id="follow-us">
-        <h1 class="mainTitleRale padding-medium">
-            Follow Us
-        </h1>
-        <p class="mainBody">
-            Want more cool 3D printed models? Follow us on Instagram! <a href="https://www.instagram.com/3dprinting.hedgehogs/" target="_blank">@3dprinting.hedgehogs</a>
-    </div>
+        </div>
     </div>
     <div class="loader-wrapper loader-padding">
         <span class="loader"><span class="loader-inner"></span></span>  
