dark moded the models page

--- a/models.html
+++ b/models.html
@@ -16,7 +16,7 @@
     <script src="js/Header.js"></script>
     <script src="js/models.js"></script>
 
-    <link rel="stylesheet" href="css/Header.css" />
+    <link rel="stylesheet" href="css/output.css" />
     <link rel="stylesheet" href="css/MasterStyle.css" />
     <link rel="stylesheet" href="css/models.css" />
     <link rel="stylesheet" href="css/footer.css" />
@@ -59,46 +59,48 @@
         </div>
     </div>
     <br />
-    <div style="padding-left: 20px">
-        <div class="mainTitleRale">
-            <h1>3D Model Showcase</h1>
-            <p class="mainBodyRale center padding-small">
-                This page will be updated periodically with new models as they are made.
-            </p>
-        </div>
-        <br />
-        <div class="mainBody-grid">
-            <div class="mainBody-tile">
-                <h3 class="raleway">Hedgehog - By Tristan</h3>
-                <a href="models/hedgehog.stl">Download Hedgehog Model (.stl)</a>
-                <br />
-                <img id="hedgehogModelPreview"
-                     src="images/HedgehogPreview_Front.png"
-                     width="300"
-                     height="250"
-                     alt="Hedgehog Model Front" />
-                <br />
-                <button id="button_HedgehogPreviewLeft" class="buttonBigger">
-                    <
-                </button>
-                <button id="button_HedgehogPreviewRight" class="buttonBigger">
-                    >
-                </button>
+    <div class="dark:bg-black dark:text-white">
+        <div style="padding-left: 20px">
+            <div class="mainTitleRale">
+                <h1>3D Model Showcase</h1>
+                <p class="mainBodyRale center padding-small">
+                    This page will be updated periodically with new models as they are made.
+                </p>
             </div>
-            <div class="mainBody-tile">
-                <h3 class="raleway">Old Books - By Ryan</h3>
-                <p>
-                    <a href="models/old boooke.stl">Download Old BooksModel (.stl)</a>
+            <br />
+            <div class="mainBody-grid">
+                <div class="mainBody-tile">
+                    <h3 class="ralewayBold">Hedgehog - By Tristan</h3>
+                    <a href="models/hedgehog.stl">Download Hedgehog Model (.stl)</a>
                     <br />
-                    <br />
-                    <a href="models/old boooke.blend">Download Old Books Model (.blend)</a>
-                    <br />
-                    <br />
-                    <img src="images/books.png"
+                    <img id="hedgehogModelPreview"
+                         src="images/HedgehogPreview_Front.png"
                          width="300"
                          height="250"
-                         alt="Old Books Model" />
-                </p>
+                         alt="Hedgehog Model Front" />
+                    <br />
+                    <button id="button_HedgehogPreviewLeft" class="buttonBigger">
+                        <
+                    </button>
+                    <button id="button_HedgehogPreviewRight" class="buttonBigger">
+                        >
+                    </button>
+                </div>
+                <div class="mainBody-tile">
+                    <h3 class="ralewayBold">Old Books - By Ryan</h3>
+                    <p>
+                        <a href="models/old boooke.stl">Download Old BooksModel (.stl)</a>
+                        <br />
+                        <br />
+                        <a href="models/old boooke.blend">Download Old Books Model (.blend)</a>
+                        <br />
+                        <br />
+                        <img src="images/books.png"
+                             width="300"
+                             height="250"
+                             alt="Old Books Model" />
+                    </p>
+                </div>
             </div>
         </div>
     </div>
