fixed the secret

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ porkyproductions.github.io
     <script type="text/javascript" src="js/Utility.js"></script>
     <script type="text/javascript" src="js/Header.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/secret.js"></script>
 
 <!--CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS------->
 <!--In-House-->
