added the footer secret

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ porkyproductions.github.io
       <div
         id="logoText"
         class="header-logoText"
+        onclick="generateText()"
         style="left: 140px; top: 45px; font-size: 23px"
       >
         PorkyProductions
@@ -244,13 +245,13 @@ porkyproductions.github.io
               <br>
               <img src="assets/PPio logo.png" width="25%" alt="porky productions logo" />
               <br>
-              <p id="FooterHeart">
+              <p>
                   Porky Productions is a group of highly established individuals namely
                   Tristan and Ryan, who are on the path for technological development
                   in many areas. This website is meant to showcase our accomplishments
                   as well as to create something that we can be proud about.
                   <br>
-                  Made with <img src="https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/2764.svg" alt="love" height="10px"> at PorkyProductions
+                  Made with <img src="https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/2764.svg" alt="love" height="10px" onclick="addToCounter()"> at PorkyProductions
               </p>
               <a class="center" href="index.html">Home</a>
               <a class="center" href="games.html">Games</a>
