fix some minor stuff

--- a/credits.html
+++ b/credits.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/creditStyle.css" />
+    <link rel="stylesheet" href="css/creditstyle.css" />
     <link rel="icon" type="icon" href="assets/HedgehogIcon.png" /> <!--FAVICON-->
     <link rel="stylesheet" href="css/MasterStyle.css">
     <link rel="stylesheet" href="css/footer.css" />
@@ -22,7 +22,7 @@
     <div class='blue-purp-gradient'>
               
         <br>
-        <h1 class="mainTitleRale-white padding-xlarge" >
+        <h1 class="mainTitleRale-white padding-xlarge text-white" style="color: white;" >
             Open-Source Credits
         </h1>
     </div>
