--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ porkyproductions.github.io
               <a class="center" href="credits.html">Credits</a>
               <a class="center" href="https://practical-lamport-2debac.netlify.app/">Sister Site (identical, if this site doesn't work, try this)</a>
           </div>
-
+          </div>
       </div>
       <!--BELOW is the function that hides the loading screen. Refer to "index.js"-->
       <script>
