added the new footer to the rest

--- a/games.html
+++ b/games.html
@@ -98,23 +98,23 @@
         </div>
     </div>
     <div class="footer">
-        <br>
-        <br>
-        <img src="assets/PPio logo.png" width="25%" class="image-center" alt="porky productions logo" />
-        <br>
-        <p class="text-center">
-            Porky Productions is a group of highly established individuals namely
-            Tristan and Ryan, who are on the path for technological development
-            in many areas. This website is meant to showcase our accomplishments
-            as well as to create something that we can be proud about.
+        <img src="assets/PPio logo.png" height="60" width="265" alt="porky productions logo" />
+        <a class="center" href="index.html" class="footer-text">Home</a>
+        <a class="center" href="games.html" class="footer-text">Games</a>
+        <a class="center" href="3DPrints.html" class="footer-text">3D Prints</a>
+        <a class="center" href="models.html" class="footer-text">Models</a>
+        <a class="center" href="develop.html" class="footer-text">Developments</a>
+        <a class="center" href="credits.html" class="footer-text">Credits</a>
+        <a class="center" href="https://practical-lamport-2debac.netlify.app/">Fallback Site</a>
+    </div>
+    <div class="footer-bottom">
+        <p>
+            © 2022 PorkyProductions. All Rights Reserved.
         </p>
-        <a class="center" href="index.html">Home</a>
-        <a class="center" href="games.html">Games</a>
-        <a class="center" href="3DPrints.html">3D Prints</a>
-        <a class="center" href="models.html">Models</a>
-        <a class="center" href="develop.html">Developments</a>
-        <a class="center" href="credits.html">Credits</a>
-        <a class="center" href="https://practical-lamport-2debac.netlify.app/">Sister Site (identical, if this site doesn't work, try this)</a>
+        &nbsp;
+        <p>
+          Made with <img src="https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/2764.svg" alt="love" height="10px" onclick="addToCounter()"> at PorkyProductions
+        </p>
     </div>
     <div class="loader-wrapper loader-padding">
         <span class="loader"><span class="loader-inner"></span></span>  
