add more secrets

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ porkyproductions.github.io
     <br />
 <!--NOTE: Titles and Headers are the "Raleway" font, everything else is Arial or sans-serif -->
     <div class="dark:bg-black dark:text-white">
-      <div class="mainTitleRaleBold padding-semi-large">
+      <div class="mainTitleRaleBold padding-semi-large" id="mainLogoText" onclick="changeColorOfMainLogoText()">
         <h1>PorkyProductions</h1>
       </div>
       <br />
